SFDC Automation/src/objects/Ryder_Error__c.object
<CustomObject>
    <fields>
        <fullName>Error_Detail__c</fullName>
        <label>Error Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logged_In_User_ID__c</fullName>
        <label>Logged In User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Ryder Error</label>
    <nameField>
        <displayFormat>ERR-{0000000}</displayFormat>
        <label>Ryder Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ryder Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>